--- a/1.html
+++ b/1.html
@@ -8,8 +8,8 @@
 
 <body>
 	<div class="intro">
-	<a href="/intro/2.html">
-		<img class="center" src="/intro/pg01.png" alt="The story begins..." />
+	<a href="/2.html">
+		<img class="center" src="/pg01.png" alt="The story begins..." />
 	</a>
 </div>
 </body>
