--- a/2.html
+++ b/2.html
@@ -9,8 +9,8 @@
 
 <body>
 	<div class="intro">
-	<a href="/intro/question.php">
-		<img class="center" src="/intro/pg02.png" alt="The story begins..." />
+	<a href="/question.php">
+		<img class="center" src="/pg02.png" alt="The story begins..." />
 	</a>
 </div>
 </body>
